# motor

./: Makefile.am  Makefile.in  R1_Module.sh  R1_Module_run.sh  R1_Module_run_server.sh  R1mapping.C  R2mapping.C  R3mapping.C  README.md  configure  goto_NegativeLimit_motor1.sh  goto_NegativeLimit_motor2.sh  goto_zero_motor2.sh  ladder.sh  motorinit  readMotorPosition.cc  serialComm.cc  setzero.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
