AUTOMAKE_OPTIONS = foreign

noinst_HEADERS = commlib.h  serialComm.h

bin_PROGRAMS = readMotorPosition

readMotorPosition_SOURCES = readMotorPosition.cc serialComm.cc

bin_SCRIPTS = motorinit quickrelativemove.sh goto_zero.sh goto_zero_motor2.sh quickmove.sh set_zero.sh setzero.sh goto_NegativeLimit_motor1.sh goto_NegativeLimit_motor2.sh
